add: crud-wallet v1
