# docs/swagger.json
@@ -6,11 +6,11 @@
     "paths": {
         "/asset": {
             "get": {
-                "description": "Get all Assets on the system",
+                "description": "Get all Wallets on the system",
                 "tags": [
                     "asset"
                 ],
-                "summary": "Get all Assets",
+                "summary": "Get all Wallets",
                 "parameters": [
                     {
                         "type": "string",
@@ -33,26 +33,26 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/tennet_gethired_application_usecases_assets.PaginationResultAsset"
+                                "$ref": "#/definitions/tennet_gethired_application_usecases_wallet.PaginationResultWallet"
                             }
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     }
                 }
@@ -67,7 +67,7 @@
                 "tags": [
                     "asset"
                 ],
-                "summary": "Create New Asset",
+                "summary": "Create New Wallet",
                 "parameters": [
                     {
                         "description": "body data",
@@ -75,7 +75,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/assets.NewAssetRequest"
+                            "$ref": "#/definitions/wallet.NewWalletRequest"
                         }
                     }
                 ],
@@ -83,25 +83,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/tennet_gethired_domain_assets.Asset"
+                            "$ref": "#/definitions/tennet_gethired_domain_wallet.Wallet"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     }
                 }
@@ -112,7 +112,7 @@
                 "tags": [
                     "asset"
                 ],
-                "summary": "Get assets by ID",
+                "summary": "Get wallet by ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -126,31 +126,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/tennet_gethired_domain_assets.Asset"
+                            "$ref": "#/definitions/tennet_gethired_domain_wallet.Wallet"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     }
                 }
@@ -159,7 +159,7 @@
                 "tags": [
                     "asset"
                 ],
-                "summary": "Get assets by ID",
+                "summary": "Get wallet by ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -173,31 +173,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/tennet_gethired_domain_assets.Asset"
+                            "$ref": "#/definitions/tennet_gethired_domain_wallet.Wallet"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     }
                 }
@@ -206,7 +206,7 @@
                 "tags": [
                     "asset"
                 ],
-                "summary": "Get assets by ID",
+                "summary": "Get wallet by ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -220,31 +220,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/tennet_gethired_domain_assets.Asset"
+                            "$ref": "#/definitions/tennet_gethired_domain_wallet.Wallet"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/assets.MessageResponse"
+                            "$ref": "#/definitions/wallet.MessageResponse"
                         }
                     }
                 }
@@ -674,6 +674,35 @@
                 }
             }
         },
+        "tennet_gethired_application_usecases_wallet.PaginationResultWallet": {
+            "type": "object",
+            "properties": {
+                "current": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/tennet_gethired_domain_wallet.Wallet"
+                    }
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "nextCursor": {
+                    "type": "integer"
+                },
+                "numPages": {
+                    "type": "integer"
+                },
+                "prevCursor": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "tennet_gethired_domain_assets.Asset": {
             "type": "object",
             "properties": {
@@ -697,6 +726,17 @@
                 },
                 "wallet_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "tennet_gethired_domain_wallet.Wallet": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
@@ -770,6 +810,25 @@
                 "user": {
                     "type": "string",
                     "example": "BossonH"
+                }
+            }
+        },
+        "wallet.MessageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "wallet.NewWalletRequest": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
                 }
             }
         }
