# infrastructure/repository/mysql/wallet/responses.go
@@ -1,0 +1,6 @@
+package wallet
+
+// MessageResponse is a struct that contains the response body for the message
+type MessageResponse struct {
+	Message string `json:"message"`
+}
